tests/ui/fail/log_interpolated_unsatisfied_trait_debug.stderr
error[E0277]: `Input` doesn't implement `std::fmt::Debug`
 --> fail/log_interpolated_unsatisfied_trait_debug.rs:7:32
  |
7 |     emit::info!("Text \"and\" {#[emit::as_debug] a: Input} and more");
  |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^ `Input` cannot be formatted using `{:?}`
  |
  = help: the trait `std::fmt::Debug` is not implemented for `Input`
  = note: add `#[derive(Debug)]` to `Input` or manually `impl std::fmt::Debug for Input`
  = help: the following other types implement trait `main::emit::emit_rt::capture::Capture<T>`:
            <(dyn std::error::Error + 'static) as main::emit::emit_rt::capture::Capture<main::emit::emit_rt::capture::CaptureError>>
            <(dyn std::fmt::Debug + 'static) as main::emit::emit_rt::capture::Capture<main::emit::emit_rt::capture::CaptureDebug>>
            <(dyn std::fmt::Display + 'static) as main::emit::emit_rt::capture::Capture<main::emit::emit_rt::capture::CaptureDisplay>>
            <str as main::emit::emit_rt::capture::Capture<T>>
  = note: required for `Input` to implement `main::emit::emit_rt::capture::Capture<main::emit::emit_rt::capture::CaptureAnonDebug>`
note: required by a bound in `__private_capture_anon_as_debug`
 --> $WORKSPACE/rt/src/capture.rs
  |
  |         Self: Capture<CaptureAnonDebug>,
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__PrivateCapture::__private_capture_anon_as_debug`
  = note: this error originates in the macro `emit::ct::__private_capture_anon_as_debug` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Input` with `#[derive(Debug)]`
    |
4   | #[derive(Debug)]
    |
